--- a/pages/listaReproduccion.html
+++ b/pages/listaReproduccion.html
@@ -61,7 +61,252 @@
           </div>
         </div>
       </section>
-      <section></section>
+      <section class="fuentePrincipal">
+        <div class="container-fluid">
+          <div class="row bg-black border-top border-bottom border-white">
+            <div class="col-md-2 col-lg-2 text-center mt-md-2 my-lg-2">
+              <a href="#"><i class="bi bi-play-circle fs-1 text-white"></i></a>
+            </div>
+            <div
+              class="col-md-3 col-lg-3 text-center text-white mt-md-1 my-lg-2"
+            >
+              <p class="m-1">Nombre de la canción</p>
+              <p class="m-1">Artista</p>
+            </div>
+            <div
+              class="col-md-4 col-lg-4 text-center text-white mt-md-3 mt-lg-4"
+            >
+              <p>Álbum</p>
+            </div>
+            <div
+              class="col-md-3 col-lg-3 text-center text-white mt-md-3 mt-lg-3"
+            >
+              <i class="bi bi-heart fs-3 ms-md-5"></i>
+              <i class="bi bi-plus-square fs-3 ms-md-5"></i>
+            </div>
+          </div>
+          <div class="row bg-black border-top border-bottom border-white">
+            <div class="col-md-2 col-lg-2 text-center mt-md-2 my-lg-2">
+              <a href="#"><i class="bi bi-play-circle fs-1 text-white"></i></a>
+            </div>
+            <div
+              class="col-md-3 col-lg-3 text-center text-white mt-md-1 my-lg-2"
+            >
+              <p class="m-1">Nombre de la canción</p>
+              <p class="m-1">Artista</p>
+            </div>
+            <div
+              class="col-md-4 col-lg-4 text-center text-white mt-md-3 mt-lg-4"
+            >
+              <p>Álbum</p>
+            </div>
+            <div
+              class="col-md-3 col-lg-3 text-center text-white mt-md-3 mt-lg-3"
+            >
+              <i class="bi bi-heart fs-3 ms-md-5"></i>
+              <i class="bi bi-plus-square fs-3 ms-md-5"></i>
+            </div>
+          </div>
+          <div class="row bg-black border-top border-bottom border-white">
+            <div class="col-md-2 col-lg-2 text-center mt-md-2 my-lg-2">
+              <a href="#"><i class="bi bi-play-circle fs-1 text-white"></i></a>
+            </div>
+            <div
+              class="col-md-3 col-lg-3 text-center text-white mt-md-1 my-lg-2"
+            >
+              <p class="m-1">Nombre de la canción</p>
+              <p class="m-1">Artista</p>
+            </div>
+            <div
+              class="col-md-4 col-lg-4 text-center text-white mt-md-3 mt-lg-4"
+            >
+              <p>Álbum</p>
+            </div>
+            <div
+              class="col-md-3 col-lg-3 text-center text-white mt-md-3 mt-lg-3"
+            >
+              <i class="bi bi-heart fs-3 ms-md-5"></i>
+              <i class="bi bi-plus-square fs-3 ms-md-5"></i>
+            </div>
+          </div>
+          <div class="row bg-black border-top border-bottom border-white">
+            <div class="col-md-2 col-lg-2 text-center mt-md-2 my-lg-2">
+              <a href="#"><i class="bi bi-play-circle fs-1 text-white"></i></a>
+            </div>
+            <div
+              class="col-md-3 col-lg-3 text-center text-white mt-md-1 my-lg-2"
+            >
+              <p class="m-1">Nombre de la canción</p>
+              <p class="m-1">Artista</p>
+            </div>
+            <div
+              class="col-md-4 col-lg-4 text-center text-white mt-md-3 mt-lg-4"
+            >
+              <p>Álbum</p>
+            </div>
+            <div
+              class="col-md-3 col-lg-3 text-center text-white mt-md-3 mt-lg-3"
+            >
+              <i class="bi bi-heart fs-3 ms-md-5"></i>
+              <i class="bi bi-plus-square fs-3 ms-md-5"></i>
+            </div>
+          </div>
+          <div class="row bg-black border-top border-bottom border-white">
+            <div class="col-md-2 col-lg-2 text-center mt-md-2 my-lg-2">
+              <a href="#"><i class="bi bi-play-circle fs-1 text-white"></i></a>
+            </div>
+            <div
+              class="col-md-3 col-lg-3 text-center text-white mt-md-1 my-lg-2"
+            >
+              <p class="m-1">Nombre de la canción</p>
+              <p class="m-1">Artista</p>
+            </div>
+            <div
+              class="col-md-4 col-lg-4 text-center text-white mt-md-3 mt-lg-4"
+            >
+              <p>Álbum</p>
+            </div>
+            <div
+              class="col-md-3 col-lg-3 text-center text-white mt-md-3 mt-lg-3"
+            >
+              <i class="bi bi-heart fs-3 ms-md-5"></i>
+              <i class="bi bi-plus-square fs-3 ms-md-5"></i>
+            </div>
+          </div>
+          <div class="row bg-black border-top border-bottom border-white">
+            <div class="col-md-2 col-lg-2 text-center mt-md-2 my-lg-2">
+              <a href="#"><i class="bi bi-play-circle fs-1 text-white"></i></a>
+            </div>
+            <div
+              class="col-md-3 col-lg-3 text-center text-white mt-md-1 my-lg-2"
+            >
+              <p class="m-1">Nombre de la canción</p>
+              <p class="m-1">Artista</p>
+            </div>
+            <div
+              class="col-md-4 col-lg-4 text-center text-white mt-md-3 mt-lg-4"
+            >
+              <p>Álbum</p>
+            </div>
+            <div
+              class="col-md-3 col-lg-3 text-center text-white mt-md-3 mt-lg-3"
+            >
+              <i class="bi bi-heart fs-3 ms-md-5"></i>
+              <i class="bi bi-plus-square fs-3 ms-md-5"></i>
+            </div>
+          </div>
+          <div class="row bg-black border-top border-bottom border-white">
+            <div class="col-md-2 col-lg-2 text-center mt-md-2 my-lg-2">
+              <a href="#"><i class="bi bi-play-circle fs-1 text-white"></i></a>
+            </div>
+            <div
+              class="col-md-3 col-lg-3 text-center text-white mt-md-1 my-lg-2"
+            >
+              <p class="m-1">Nombre de la canción</p>
+              <p class="m-1">Artista</p>
+            </div>
+            <div
+              class="col-md-4 col-lg-4 text-center text-white mt-md-3 mt-lg-4"
+            >
+              <p>Álbum</p>
+            </div>
+            <div
+              class="col-md-3 col-lg-3 text-center text-white mt-md-3 mt-lg-3"
+            >
+              <i class="bi bi-heart fs-3 ms-md-5"></i>
+              <i class="bi bi-plus-square fs-3 ms-md-5"></i>
+            </div>
+          </div>
+          <div class="row bg-black border-top border-bottom border-white">
+            <div class="col-md-2 col-lg-2 text-center mt-md-2 my-lg-2">
+              <a href="#"><i class="bi bi-play-circle fs-1 text-white"></i></a>
+            </div>
+            <div
+              class="col-md-3 col-lg-3 text-center text-white mt-md-1 my-lg-2"
+            >
+              <p class="m-1">Nombre de la canción</p>
+              <p class="m-1">Artista</p>
+            </div>
+            <div
+              class="col-md-4 col-lg-4 text-center text-white mt-md-3 mt-lg-4"
+            >
+              <p>Álbum</p>
+            </div>
+            <div
+              class="col-md-3 col-lg-3 text-center text-white mt-md-3 mt-lg-3"
+            >
+              <i class="bi bi-heart fs-3 ms-md-5"></i>
+              <i class="bi bi-plus-square fs-3 ms-md-5"></i>
+            </div>
+          </div>
+          <div class="row bg-black border-top border-bottom border-white">
+            <div class="col-md-2 col-lg-2 text-center mt-md-2 my-lg-2">
+              <a href="#"><i class="bi bi-play-circle fs-1 text-white"></i></a>
+            </div>
+            <div
+              class="col-md-3 col-lg-3 text-center text-white mt-md-1 my-lg-2"
+            >
+              <p class="m-1">Nombre de la canción</p>
+              <p class="m-1">Artista</p>
+            </div>
+            <div
+              class="col-md-4 col-lg-4 text-center text-white mt-md-3 mt-lg-4"
+            >
+              <p>Álbum</p>
+            </div>
+            <div
+              class="col-md-3 col-lg-3 text-center text-white mt-md-3 mt-lg-3"
+            >
+              <i class="bi bi-heart fs-3 ms-md-5"></i>
+              <i class="bi bi-plus-square fs-3 ms-md-5"></i>
+            </div>
+          </div>
+          <div class="row bg-black border-top border-bottom border-white">
+            <div class="col-md-2 col-lg-2 text-center mt-md-2 my-lg-2">
+              <a href="#"><i class="bi bi-play-circle fs-1 text-white"></i></a>
+            </div>
+            <div
+              class="col-md-3 col-lg-3 text-center text-white mt-md-1 my-lg-2"
+            >
+              <p class="m-1">Nombre de la canción</p>
+              <p class="m-1">Artista</p>
+            </div>
+            <div
+              class="col-md-4 col-lg-4 text-center text-white mt-md-3 mt-lg-4"
+            >
+              <p>Álbum</p>
+            </div>
+            <div
+              class="col-md-3 col-lg-3 text-center text-white mt-md-3 mt-lg-3"
+            >
+              <i class="bi bi-heart fs-3 ms-md-5"></i>
+              <i class="bi bi-plus-square fs-3 ms-md-5"></i>
+            </div>
+          </div>
+          <div class="row bg-black border-top border-bottom border-white">
+            <div class="col-md-2 col-lg-2 text-center mt-md-2 my-lg-2">
+              <a href="#"><i class="bi bi-play-circle fs-1 text-white"></i></a>
+            </div>
+            <div
+              class="col-md-3 col-lg-3 text-center text-white mt-md-1 my-lg-2"
+            >
+              <p class="m-1">Nombre de la canción</p>
+              <p class="m-1">Artista</p>
+            </div>
+            <div
+              class="col-md-4 col-lg-4 text-center text-white mt-md-3 mt-lg-4"
+            >
+              <p>Álbum</p>
+            </div>
+            <div
+              class="col-md-3 col-lg-3 text-center text-white mt-md-3 mt-lg-3"
+            >
+              <i class="bi bi-heart fs-3 ms-md-5"></i>
+              <i class="bi bi-plus-square fs-3 ms-md-5"></i>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
     <script
