--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
               </li>
               <li class="mt-3 list-unstyled">
                 <a
-                  href=""
+                  href="./pages/registro.html"
                   class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
                   >Registro</a
                 >
